--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.edianzu</groupId>
-	<artifactId>crm</artifactId>
+	<groupId>com.barber</groupId>
+	<artifactId>barber</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>crm</name>
-	<description>edianzu-crm</description>
+	<name>barber</name>
+	<description>barber</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
