--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -15,9 +15,9 @@ spring:
 #单个数据源
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.20.210:3306/smb?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
-    username: admin
-    password: quanqing123
+    url: jdbc:mysql://localhost:3306/smb?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+    username:
+    password:
  ##################以下为druid增加的配置###########################
     type: com.alibaba.druid.pool.DruidDataSource
     # 下面为连接池的补充设置，应用到上面所有数据源中
